# makeup-app

./: .env.example  .env.test  .gitignore  .php-cs-fixer.php  .windsurfrules  README.md  ROADMAP.md  SESSION_LOG.md  UNIFIED-ROADMAP.md  babel.config.js  composer.json  directory-tech-stack.md  frontend_aesthetic.md  index.html  index.seo.html  jest.config.js  jest.setup.js  jest.setup.ts  main.js  main.js.new  makeup-directory-implementation.md  makeup-website-implementation.md  makeup.code-workspace  next.config.js  original idea.md  package-lock.json  package.json  php.ini  phpunit.xml  playwright.config.ts  rapid-implementation-guide -front end.md  server.js  start-servers.bat  styles.css  tsconfig.jest.json  tsconfig.test.json  typedoc.json  wp-config.php
admin/: index.php  login.php
backend-python/: app.py  main.py  pyproject.toml  pyproject.toml.bak  requirements.txt  seed_data.py
backend-python/middleware/: auth.js  errorHandler.js  rateLimiter.js  validation.js
backend-python/models/: Category.js  Look.js  Product.js  User.js  UserActivity.js  index.js
backend-python/routes/: analytics.js  auth.js  looks.js  products.js  profile.js  recommendations.js  search.js  skincare.js  social.js  virtualTryOn.js
backend-python/services/: analytics.js  recommendationEngine.js  virtualTryOn.js
backend-python/utils/: email.js
cms/: .env
config/: database.php  env.php  redis.js
data/: tasks.json
database/: content_schema.sql  import_test_data.php  init.sql  makeup_schema.sql  revenue_schema.sql  schema.sql  test_data.sql
docs/: AFFILIATE-PARTNERSHIPS.md  (+32 more)
(+374 files in other folders)
