[project]
name = "backend-python"
version = "0.1.0"
description = ""
authors = [
    {name = "dfrostar",email = "darren.frost@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "uvicorn (==0.34.0)",
    "numpy (==1.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
